# online_learning_platform

./: .env.sample  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  permisions.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  permisions.py  serializers.py  urls.py  views.py
users/management/commands/: create_groups.py  create_user.py  populate_payments.py
users/migrations/: 0001_initial.py
